--- a/templates/output.xml
+++ b/templates/output.xml
@@ -2,14 +2,20 @@
 <pmh_approved_images>
     {% if images %}
         {% for image in images %}
-            <image orig_filename="{{image}}">
+            <image>
+                <orig_filename>{{image}}</orig_filename>
+                <pmh_name>{{image.name}}</pmh_name>
                 <orig_figure_source>{{image.orig_figure_source}}</orig_figure_source>
                 <pmh_figure_source>{{image.pmh_figure_source}}</pmh_figure_source>
                 <source_url>{{image.source_url}}</source_url>
                 <alt_text>{{image.alt_text}}</alt_text>
                 {% if image.caption %}
-                <caption>{{image.caption}}</caption>
+                    <caption>{{image.caption}}</caption>
                 {% endif %}
+                <pmhid>{{image.pmhid}}</pmhid>
+                <other_fields>
+                    {{image.blob|safe}}
+                </other_fields>
             </image>
         {% endfor %}
     {% else %}
